@@ -185,6 +185,7 @@ private:
     StatisticsManager*  statistics;
 
     int     protocolId;
+    unsigned entriesPerDir_;
     std::string svcType;
     std::string address;
 
